--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: canteen_management_app
-description: A Canteen Management App
+name: quickbite_campus
+description: Fast & Easy Campus Food Ordering System
 publish_to: 'none'
 version: 1.0.0+1
 
@@ -19,13 +19,21 @@ dependencies:
   cloudinary: ^1.2.0
   image_picker: ^1.0.7
   cached_network_image: ^3.3.1
-  fl_chart: ^0.66.0
-  intl: ^0.19.0
+  fl_chart: ^0.69.2
+  intl: ^0.20.1
+  googleapis_auth: ^1.6.0
+  http: ^1.2.2
+  flutter_dotenv: ^5.2.1
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.1
 
 flutter:
-  uses-material-design: true 
+  uses-material-design: true
+  assets:
+    - .env
+    - assets/app_logo.png
